samples/_failures_safe/1761174947_9e4bdb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5432b345.c: In function ‘main’:
./samples/SAFE/__tmp_5432b345.c:162:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 |         int from, to
      |         ^~~
./samples/SAFE/__tmp_5432b345.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5432b345.c:162:9: error: expected declaration or statement at end of input
